Fixed the p overflow-x of the card by truncating the p
Also updated the README.md for better instructions.
Issue: #428

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -342,7 +342,8 @@ figure.effect-gcihover:hover figcaption::before {
     font-size: 20px;
     white-space: nowrap;
     padding: 5px;
-    overflow-x: scroll;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 .mentors .avatar, #contributors-list .avatar, .students-sec .avatar, .projects-sec .avatar {
     position: relative;
